[gd_scene load_steps=4 format=3 uid="uid://do7naiytuc1cp"]

[ext_resource type="Texture2D" uid="uid://ck4au80p8sdyc" path="res://assets/crosshairs/crosshair003.png" id="1_hxmcv"]
[ext_resource type="Script" path="res://source/user_interface/user_interface.gd" id="1_igwfp"]
[ext_resource type="Script" path="res://source/user_interface/DebugPanel.gd" id="3_tbgx3"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_igwfp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Crosshair" type="TextureRect" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_hxmcv")
expand_mode = 1

[node name="DebugPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("3_tbgx3")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/DebugPanel"]
layout_mode = 2

[node name="MotionState" type="Label" parent="MarginContainer/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "text"

[node name="AimState" type="Label" parent="MarginContainer/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="CurrentAmmo" type="Label" parent="MarginContainer/DebugPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MaxAmmo" type="Label" parent="MarginContainer/DebugPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
